--- a/css/style.css
+++ b/css/style.css
@@ -1609,7 +1609,7 @@ p.weight{
 
 }
 .products-details .product-color h3{
-  color: #rgba(0, 0, 0, 0.65);
+  color: rgba(0, 0, 0, 0.65);
 }
 
 .products-details .product-color ul{
@@ -1621,7 +1621,7 @@ p.weight{
  display: block !important;
 }
 .blog_section .heading_container h2{
-  color: #rgba(0, 0, 0, 0.65);
+  color: rgba(0, 0, 0, 0.65);
 }
 
 .why_section.news_and_events .box{
